syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.adinneen.smokeLibrary";
option java_outer_classname = "SmokeProto";

package smokeLibrary;

service Library{
	// Unary rpc
	rpc getGameInfo(GameRequest) returns (GameInfo){}
	//Bidirectional Streaming
	rpc getInstalledGames(stream Game) returns (stream Game){}
}


message GameRequest{
	string accountName = 1;
}

message GameInfo{
	string message = 1;
}

message Game{
	string name = 1;
}

